# GradeManager

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  GradeManager.sln  Menu.txt  README.md
.github/workflows/: clang.yml
GradeManager/: Assignment.cpp  Assignment.h  Course.cpp  Course.h  GradeManager.vcxproj  GradeManager.vcxproj.filters  Save.cpp  Save.h  main.cpp
include/: Course.h  Save.hpp
src/: Assignment.cpp  Assignment.hpp  Course.cpp  Course.hpp  Save.cpp  Save.hpp  main.cpp  menu.cpp  menu.hpp
tests/: AssignmentTests.cpp  CMakeLists.txt  CourseTests.cpp  SaveTests.cpp  tests.cpp
